Flesh out parsing, add test