@@ -117,8 +117,8 @@ public class VehicleParkingsLayerTest {
 
     assertEquals("[POINT (1 2)]", geometries.toString());
     assertEquals(
-      "VehicleParking{name: 'default name', coordinate: (2.0, 1.0)}",
-      geometries.get(0).getUserData().toString()
+      "VehicleParking{id: 'F:id', name: 'default name', coordinate: (2.0, 1.0)}",
+      geometries.getFirst().getUserData().toString()
     );
   }
 
